turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:6: error: ')' expected but integer literal found.
    droite(1./360.)
              ^