turtleart.circleying.CircleYing.scala.code
override def run() {
  AnusXXX() 
}
def AnusXXX(){
  while(k<180){
    droite(1./360.)
  	avance(1)
  	k = k+1
  } 
}